--- a/views/auth/registerAndSubscribe.ejs
+++ b/views/auth/registerAndSubscribe.ejs
@@ -68,7 +68,7 @@
                                                     <% } %>
                                                 </div>
                                             </div>
-                                            <h4 class="card-title">
+                                            <h4 class="card-title text-center mb-2">
                                                 <%= lingua.subscribe%>
                                             </h4>
                                             <div id="loading-div" class="text-small text-wrap">
