--- a/views/partials/subscriptions/information.ejs
+++ b/views/partials/subscriptions/information.ejs
@@ -11,7 +11,7 @@
         <h6 class="font-monospace text-primary mt-2">Account Balance: <%= customer?.balance%></h6>
         <% } %>
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-12 text-end">
+    <div class="col-lg-6 col-sm-12 text-end">
         <% if(showManageBtn) { %>
         <a id="manage-billing-button" class="btn btn-primary btn-icon-text text-white manage-billing-button m-1"
             style="margin: 0;" type="submit" value="<%- customer.billingID%>" email="<%- customer.email%>">
@@ -56,7 +56,7 @@
                 <td>
                     <div class="card p-3">
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <h6>Products</h4>
                                     <hr>
                                     <% var subStatus = stripeSubscription.data.status %>
@@ -181,7 +181,7 @@
                                     <% } %>
                             </div>
 
-                            <div class="col-md-3 col-sm-12">
+                            <div class="col-lg-3 col-md-12 col-sm-12">
                                 <h6>
                                     <%= lingua.membership.period%>
                                     <!-- <small>(<%= lingua.membership.startDate%>) /
@@ -207,7 +207,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-12">
+                            <div class="col-lg-3 col-md-12 col-sm-12">
 
                                 <h6> <%= lingua.membership.status%>
                                     <% if([roles.ADMIN].includes(user.role)) { %>
