AC-56 #comment Start implementing the Create memberships from in the Plate validation process for the cashier and admins

--- a/views/auth/registerAndSubscribe.ejs
+++ b/views/auth/registerAndSubscribe.ejs
@@ -95,7 +95,7 @@
                                                         </h5>
                                                         <hr>
 
-                                                        <%- include('../cars/formFields.ejs', {allMakes, car: null, userCars : []}); %>
+                                                        <%- include('../cars/formFields.ejs', {allMakes, car: null, userCars : [], carPlate}); %>
 
                                                         <h5><i class="fa-solid fa-3 list-number"></i>
                                                             <%= lingua.membership.selectMembership%>
