--- a/views/partials/subscriptions/subscriptions.ejs
+++ b/views/partials/subscriptions/subscriptions.ejs
@@ -10,8 +10,8 @@
                             <%= lingua.membership.notPlan%>
                         </p>
                         <br>
-                        <a href="/create-subscriptions" class="btn btn-primary btn-icon-text text-white m-1"
-                            type="button">
+                        <a href="/create-subscriptions"
+                            class="btn btn-primary btn-icon-text text-white m-1 btn-sm-block" type="button">
                             <i class="fas fa-plus btn-icon-prepend"></i> <%= lingua.membership.createSubscriptions%>
                         </a>
 
