--- a/views/partials/subscriptions/information.ejs
+++ b/views/partials/subscriptions/information.ejs
@@ -46,14 +46,40 @@
 <div class="row">
 
     <% for(stripeSubscription of subsOrdered) { %>
+    <% var subStatus = stripeSubscription.data.status %>
+
     <div class="col-md-6 col-sm-12">
         <div class="card p-3 my-2">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
 
-                    <div class="d-flex justify-content-between align-items-start">
-                        <h6>Information</h6>
-
+                    <div class="d-flex justify-content-between align-items-start align-items-center">
+                        <h6 class="mb-0">Information</h6>
+                        <div class="dropdown">
+                            <button type="button" class="btn btn-icon mx-0 p-0" id="dropdownMenuIconButton3"
+                                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fa fa-ellipsis-vertical"></i>
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuIconButton3">
+                                <a class="dropdown-item" href="#" title="Cancel Subscription"
+                                    onclick="return confirmCancelSubscription('<%= stripeSubscription.id %>')">
+                                    <i class="fa-solid fa-cancel"></i>
+                                    Cancel Subscription
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <%# if(![roles.ADMIN].includes(user.role)) { %>
+                                <a href="#" id="sync-btn-<%= stripeSubscription.id%>"
+                                    value="<%= stripeSubscription.id%>" class="dropdown-item sync-btn"
+                                    title="Sync with Stripe">
+                                    <i class="fa-solid fa-rotate"></i>
+                                    Synchronize Subscription
+                                </a>
+                                <%# } %>
+                            </div>
+                        </div>
+                    </div>
+                    <hr class="m-2">
+                    <div>
                         <% if([stripeStatus.ACTIVE, stripeStatus.TRIALING].includes(stripeSubscription?.data?.status)) { %>
                         <span class="badge badge-opacity-success badge-outline-success float-end"
                             style="text-transform: uppercase" title="Membership Status" data-toggle="tooltip"
@@ -62,16 +88,18 @@
                         </span>
 
                         <% } else if([stripeStatus.CANCELED, stripeStatus.UNPAID, stripeStatus.NONE, stripeStatus.INCOMPLETE_EXPIRED].includes(subStatus)) { %>
-                        <span class="badge badge-opacity-danger float-end" style="text-transform: uppercase"
+                        <span class="badge badge-danger badge-opacity-danger float-end"
+                            style="text-transform: uppercase" title="Membership Status" data-toggle="tooltip"
+                            data-placement="bottom">
+                            <%= stripeSubscription?.data?.status %>
+                        </span>
+                        <% } else { %>
+                        <span class="badge badge-info badge-opacity-danger float-end" style="text-transform: uppercase"
                             title="Membership Status" data-toggle="tooltip" data-placement="bottom">
                             <%= stripeSubscription?.data?.status %>
                         </span>
                         <% } %>
                     </div>
-
-
-                    <hr>
-                    <% var subStatus = stripeSubscription.data.status %>
                     <% for(item of stripeSubscription.items) { %>
                     <div class="col-auto p-1">
                         <div class="p-2 mb-2">
@@ -184,11 +212,13 @@
                             </div>
                         </div>
                     </div>
-
                     <% } %>
 
 
-                    <div class="">
+                    <div class="col-auto">
+                        <p>
+                            ID: <%= stripeSubscription.id%>
+                        </p>
                         <p>
                             Created:
                             <%= moment(stripeSubscription?.data?.created * 1000).format(completeDateFormat)%>
@@ -198,43 +228,23 @@
                             <%= moment(stripeSubscription?.data?.current_period_start * 1000).isValid() ? moment(stripeSubscription?.data?.current_period_start * 1000).format(shortDateFormat) : 'N/A' %>
                             /
                             <%= moment(stripeSubscription?.data?.current_period_end * 1000).isValid() ? moment(stripeSubscription?.data?.current_period_end * 1000).format(shortDateFormat) : 'N/A' %>
-                            <br>
-                            <br>
-                            <% if(stripeSubscription?.data.cancel_at) { %>
+                        </p>
+
+                        <% if(stripeSubscription?.data.cancel_at) { %>
+                        <p>
                             <b class="error">
                                 This membership its valid until:
-                                <br>
                                 <i class="fa-solid fa-calendar fa-fw"></i>
                                 <%= moment(stripeSubscription?.data?.cancel_at * 1000).isValid() ? moment(stripeSubscription?.data?.cancel_at * 1000).format(shortDateFormat) : 'N/A' %>
                             </b>
-                            <% } %>
                         </p>
+                        <% } %>
                     </div>
 
                 </div>
             </div>
 
-            <div id="cancel-update-<%= stripeSubscription?.id%>" class="">
-                <button class="btn btn-outline-danger btn-sm-block w-100" title="Cancel Subscription"
-                    onclick="return confirmCancelSubscription('<%= stripeSubscription.id %>')">
-                    Cancel Subscription
-                </button>
-            </div>
-            <div>
-                <p class="mt-2">
-                    <small>
-                        ID: <%= stripeSubscription.id%>
-                    </small>
-                </p>
-                <%# if(![roles.ADMIN].includes(user.role)) { %>
-                <button id="sync-btn-<%- stripeSubscription.id%>" value="<%- stripeSubscription.id%>"
-                    class="sync-btn btn btn-icon p-0 text-primary border-0 m-0 float-end" title="Sync with Stripe">
-                    <i class="fa-solid fa-rotate"></i>
-                </button>
-                <div id="sync-update-<%- stripeSubscription.id%>" class="text-small text-wrap">
-                </div>
-
-                <%# } %>
+            <div id="loading-update-<%= stripeSubscription?.id%>" class="text-small text-wrap">
             </div>
         </div>
     </div>
@@ -262,18 +272,18 @@
                 value: value
             }),
             beforeSend: function () {
-                showResult(`#sync-update-${value}`,
+                showResult(`#loading-update-${value}`,
                     `<div class="spinner text-center p-1 m-1">
                             <div class="spinner-grow spinner-grow-sm"></div>
                     </div>`
                 );
             }
         }).done(function (result) {
-            showResult(`#sync-update-${value}`, result);
+            showResult(`#loading-update-${value}`, result);
             var delayInMilliseconds = 3000; //1 second
 
             setTimeout(function () {
-                showResult(`#sync-update-${value}`, '');
+                showResult(`#loading-update-${value}`, '');
                 // syncBtn.prop('disabled', false);
                 location.reload();
 
@@ -312,7 +322,7 @@
             var delayInMilliseconds = 3000; //1 second
 
             setTimeout(function () {
-                showResult(`#sync-update-${value}`, '');
+                showResult(`#loading-update-${value}`, '');
                 // syncBtn.prop('disabled', false);
                 location.reload();
 
@@ -417,46 +427,61 @@
     }
 
     function confirmCancelSubscription(subscriptionID) {
-        Swal.fire({
-            title: 'Are you sure to cancel this subscription?',
-            text: "You won't be able to revert this!",
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, cancel it!'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                console.log(`${subscriptionID}`);
 
-                $.ajax({
-                    url: "/cancelSubscription",
-                    type: "POST",
-                    contentType: "application/json",
-                    data: JSON.stringify({
-                        subscriptionID
-                    }),
-                    beforeSend: function () {
-                        showResult(`#cancel-update-${subscriptionID}`,
-                            `<div class="spinner text-center m-0">
+        $.ajax({
+            url: "/getSubscriptionDay",
+            type: "POST",
+            contentType: "application/json",
+            data: JSON.stringify({
+                subscriptionID
+            }),
+
+        }).done(function (result) {
+
+            Swal.fire({
+                title: 'Are you sure to cancel this subscription?',
+                text: result.message,
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, cancel it!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    console.log(`${subscriptionID}`);
+                    $.ajax({
+                        url: "/cancelSubscription",
+                        type: "POST",
+                        contentType: "application/json",
+                        data: JSON.stringify({
+                            subscriptionID
+                        }),
+                        beforeSend: function () {
+                            showResult(`#loading-update-${subscriptionID}`,
+                                `<div class="spinner text-center m-0">
                                 <div class="spinner-grow spinner-grow-sm"></div>
                             </div>`
-                        );
-                    }
-                }).done(function (result) {
-                    showResult(`#cancel-update-${subscriptionID}`, result.day);
-                    var delayInMilliseconds = 3000; //1 second
+                            );
+                        }
+                    }).done(function (result) {
+                        showResult(`#loading-update-${subscriptionID}`, result.day);
+                        var delayInMilliseconds = 3000; //1 second
 
-                    setTimeout(function () {
-                        showResult(`#cancel-update-${subscriptionID}`, '');
-                        // location.reload();
+                        setTimeout(function () {
+                            showResult(`#loading-update-${subscriptionID}`, '');
+                            // location.reload();
 
-                    }, delayInMilliseconds);
+                        }, delayInMilliseconds);
 
-                }).fail(function (err) {
-                    console.log(err);
-                })
-            }
+                    }).fail(function (err) {
+                        console.log(err);
+                    })
+                }
+            })
+
+
+        }).fail(function (err) {
+            console.log(err);
         })
     }
 </script>
