AC-6 #comment Finish cancel subscription workflow. Remaining final touches.

--- a/views/auth/createSubs.ejs
+++ b/views/auth/createSubs.ejs
@@ -60,7 +60,7 @@
                                             </h5>
                                             <hr>
 
-                                            <%- include('../cars/formFields.ejs', {allMakes, car: null, userCars}); %>
+                                            <%- include('../cars/formFields.ejs', {allMakes, car: null, userCars, carPlate : null}); %>
 
                                             <h5><i class="fa-solid fa-2 list-number"></i>
                                                 <%= lingua.membership.selectMembership%>
